src-tauri/abilities-macro/tests/trybuild/read_ability_direct_mutation_fails.stderr
error: Read abilities cannot call mutating services; detected: services::accounts::update_account_field
   --> tests/trybuild/read_ability_direct_mutation_fails.rs:223:10
    |
223 | async fn read_direct_mutation(
    |          ^^^^^^^^^^^^^^^^^^^^
